// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Page Main should match snapshot for AMP 1`] = `
<html
  amp=""
  dir="ltr"
  lang="fr"
>
  <head>
    <title>
      BBC Afrique Radio - BBC News Afrique
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.com/pathname"
      hreflang="fr"
      rel="alternate"
    />
    <link
      href="http://localhost:7080/afrique/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-180x180.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News Afrique"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News Afrique"
      name="application-name"
    />
    <meta
      content="Infos, musique et sports"
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="285361880228,192168680794107,9432520138,347501767628,264572343581678,303522857815,166580710064489,592266607456680,260669183761,160817274042538,236659822607,237647452933504,10150118096995434,113097918700687,143048895744759,81395234664,207150596007088,167959249906191,64040652712,190992343324,103678496456574,367167334474,160894643929209,186742265162,1526071940947174,230299653821,124158667615790,126548377386804,298318986864908,1068750829805728,228458913833525,163571453661989,660673490805047,948946275170651,485274381864409,1633841096923106,654070648098812"
      property="fb:pages"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="Infos, musique et sports"
      property="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"
      property="og:image"
    />
    <meta
      content="BBC News Afrique"
      property="og:image:alt"
    />
    <meta
      content="fr"
      property="og:locale"
    />
    <meta
      content="BBC News Afrique"
      property="og:site_name"
    />
    <meta
      content="BBC Afrique Radio - BBC News Afrique"
      property="og:title"
    />
    <meta
      content="website"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@bbcafrique"
      name="twitter:creator"
    />
    <meta
      content="Infos, musique et sports"
      name="twitter:description"
    />
    <meta
      content="BBC News Afrique"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"
      name="twitter:image:src"
    />
    <meta
      content="@bbcafrique"
      name="twitter:site"
    />
    <meta
      content="BBC Afrique Radio - BBC News Afrique"
      name="twitter:title"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@graph":[{"@type":"RadioChannel","url":"https://www.test.bbc.com/pathname","image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.test.bbc.com/pathname","name":"BBC Afrique Radio"},"inLanguage":{"@type":"Language","name":"French","alternateName":"fr"}}]}
    </script>
    <script
      async="true"
      custom-element="amp-iframe"
      src="https://cdn.ampproject.org/v0/amp-iframe-0.1.js"
    />
  </head>
  <body>
    <div>
      <amp-analytics>
        <script
          type="application/json"
        >
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"pageview":"\${base}s=598343&s2=3&p=afrique.bbc_afrique_radio.liveradio.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn%3Abbc%3Aares%3Aws_media%3Alive%3Abbc_afrique_radio]&x2=[amp]&x3=[news-afrique]&x4=[fr]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[player-live]&x8=[simorgh]&x9=[BBC%2BAfrique%2BRadio%2B-%2BBBC%2BNews%2BAfrique]&ref=\${documentReferrer}"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <div>
        chartbeat
      </div>
      <amp-analytics
        type="comscore"
      >
        <script
          type="application/json"
        >
          {"vars":{"c2":"17986528"},"extraUrlParams":{"comscorekw":"amp"}}
        </script>
      </amp-analytics>
      <main
        class="emotion-6 css-py1rac-GridComponent-GelPageGrid emotion-5"
        dir="ltr"
        role="main"
      >
        <div
          class="css-7yf5z7-GridComponent emotion-5"
          dir="ltr"
        >
          <h1
            class="css-18u3w2y-Headline emotion-0"
            id="content"
            tabindex="-1"
          >
            BBC Afrique Radio
          </h1>
          <p
            class="css-1ehf52w-Paragraph emotion-1"
          >
            Infos, musique et sports
          </p>
          <div
            class="emotion-3 css-14t66qe-Wrapper-AudioPlayer emotion-4"
          >
            <div
              class="css-1bxiiiz-StyledAudioContainer emotion-2"
            >
              <amp-iframe
                allowfullscreen="allowfullscreen"
                frameborder="0"
                layout="fill"
                sandbox="allow-scripts allow-same-origin"
                scrolling="no"
                src="https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_afrique_radio/liveradio/fr/amp?morph_env=live"
                title="Lecteur audio"
              >
                <amp-img
                  alt=""
                  attribution=""
                  height="16"
                  layout="fill"
                  placeholder="true"
                  src="http://localhost:7080/images/amp_audio_placeholder.png"
                  width="9"
                />
                <noscript />
              </amp-iframe>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>
</html>
`;

exports[`Radio Page Main should match snapshot for Canonical 1`] = `
<html
  dir="ltr"
  lang="fr"
>
  <head>
    <title>
      BBC Afrique Radio - BBC News Afrique
    </title>
    <link
      href="https://www.test.bbc.com/pathname"
      rel="canonical"
    />
    <link
      href="https://www.test.bbc.com/pathname"
      hreflang="fr"
      rel="alternate"
    />
    <link
      href="https://www.test.bbc.com/pathname.amp"
      rel="amphtml"
    />
    <link
      href="http://localhost:7080/afrique/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png"
      rel="apple-touch-icon"
      sizes="72x72"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png"
      rel="apple-touch-icon"
      sizes="96x96"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-128x128.png"
      rel="apple-touch-icon"
      sizes="128x128"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png"
      rel="apple-touch-icon"
      sizes="144x144"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-152x152.png"
      rel="apple-touch-icon"
      sizes="152x152"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-180x180.png"
      rel="apple-touch-icon"
      sizes="180x180"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png"
      rel="apple-touch-icon"
      sizes="192x192"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-384x384.png"
      rel="apple-touch-icon"
      sizes="384x384"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png"
      rel="apple-touch-icon"
      sizes="512x512"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-72x72.png"
      rel="icon"
      sizes="72x72"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-96x96.png"
      rel="icon"
      sizes="96x96"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-192x192.png"
      rel="icon"
      sizes="192x192"
      type="image/png"
    />
    <link
      href="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-512x512.png"
      rel="apple-touch-startup-image"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <meta
      content="IE=edge"
      http-equiv="X-UA-Compatible"
    />
    <meta
      charset="utf-8"
    />
    <meta
      content="noodp,noydir"
      name="robots"
    />
    <meta
      content="#B80000"
      name="theme-color"
    />
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <meta
      content="BBC News Afrique"
      name="apple-mobile-web-app-title"
    />
    <meta
      content="BBC News Afrique"
      name="application-name"
    />
    <meta
      content="Infos, musique et sports"
      name="description"
    />
    <meta
      content="100004154058350"
      property="fb:admins"
    />
    <meta
      content="1609039196070050"
      property="fb:app_id"
    />
    <meta
      content="285361880228,192168680794107,9432520138,347501767628,264572343581678,303522857815,166580710064489,592266607456680,260669183761,160817274042538,236659822607,237647452933504,10150118096995434,113097918700687,143048895744759,81395234664,207150596007088,167959249906191,64040652712,190992343324,103678496456574,367167334474,160894643929209,186742265162,1526071940947174,230299653821,124158667615790,126548377386804,298318986864908,1068750829805728,228458913833525,163571453661989,660673490805047,948946275170651,485274381864409,1633841096923106,654070648098812"
      property="fb:pages"
    />
    <meta
      content="yes"
      name="mobile-web-app-capable"
    />
    <meta
      content="#B80000"
      name="msapplication-TileColor"
    />
    <meta
      content="https://news.files.bbci.co.uk/include/articles/public/afrique/images/icons/icon-144x144.png"
      name="msapplication-TileImage"
    />
    <meta
      content="Infos, musique et sports"
      property="og:description"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"
      property="og:image"
    />
    <meta
      content="BBC News Afrique"
      property="og:image:alt"
    />
    <meta
      content="fr"
      property="og:locale"
    />
    <meta
      content="BBC News Afrique"
      property="og:site_name"
    />
    <meta
      content="BBC Afrique Radio - BBC News Afrique"
      property="og:title"
    />
    <meta
      content="website"
      property="og:type"
    />
    <meta
      content="https://www.test.bbc.com/pathname"
      property="og:url"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="@bbcafrique"
      name="twitter:creator"
    />
    <meta
      content="Infos, musique et sports"
      name="twitter:description"
    />
    <meta
      content="BBC News Afrique"
      name="twitter:image:alt"
    />
    <meta
      content="https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"
      name="twitter:image:src"
    />
    <meta
      content="@bbcafrique"
      name="twitter:site"
    />
    <meta
      content="BBC Afrique Radio - BBC News Afrique"
      name="twitter:title"
    />
    <noscript>
      &lt;img src="https://sb.scorecardresearch.com/p?c1=2&c2=17986528&cv=2.0&cj=1" /&gt;
    </noscript>
    <script
      async="true"
      src="http://localhost:7080/static/js/comscore/main-1.0.js"
      type="text/javascript"
    />
    <script
      type="application/ld+json"
    >
      {"@context":"http://schema.org","@graph":[{"@type":"RadioChannel","url":"https://www.test.bbc.com/pathname","image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/afrique.png"},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.test.bbc.com/pathname","name":"BBC Afrique Radio"},"inLanguage":{"@type":"Language","name":"French","alternateName":"fr"}}]}
    </script>
  </head>
  <body>
    <div>
      <noscript />
      <div>
        chartbeat
      </div>
      <main
        class="emotion-7 css-py1rac-GridComponent-GelPageGrid emotion-6"
        dir="ltr"
        role="main"
      >
        <div
          class="css-7yf5z7-GridComponent emotion-6"
          dir="ltr"
        >
          <h1
            class="css-18u3w2y-Headline emotion-0"
            id="content"
            tabindex="-1"
          >
            BBC Afrique Radio
          </h1>
          <p
            class="css-1ehf52w-Paragraph emotion-1"
          >
            Infos, musique et sports
          </p>
          <div
            class="emotion-4 css-14t66qe-Wrapper-AudioPlayer emotion-5"
          >
            <div
              class="css-1bxiiiz-StyledAudioContainer emotion-3"
            >
              <iframe
                allow="autoplay"
                allowfullscreen=""
                class="css-v3kkbc-StyledIframe emotion-2"
                scrolling="no"
                src="https://test.bbc.com/ws/av-embeds/media/bbc_afrique_radio/liveradio/fr?morph_env=live"
                title="Lecteur audio"
              />
              <noscript />
            </div>
          </div>
        </div>
      </main>
      <section
        aria-labelledby="Radio-Schedule"
        class=" css-xuay09-RadioScheduleSection emotion-99"
        role="region"
      >
        <div
          class="emotion-13 css-16joe58-SectionLabelWrapper-RadioScheduleSectionLabel emotion-14"
        >
          <h2
            class="css-1333sok-Heading emotion-12"
          >
            <span
              class="css-143m08z-FlexColumn emotion-11"
            >
              <span
                class="css-1jc9b24-FlexRow emotion-10"
              >
                <span
                  class="css-4poemy-Title emotion-9"
                  dir="ltr"
                  id="Radio-Schedule"
                >
                  Journaux et Magazines
                </span>
              </span>
            </span>
          </h2>
        </div>
        <div
          class="css-pme1b-RadioScheduleWrapper emotion-98"
          data-e2e="radio-schedule"
        >
          <div
            class="emotion-95 css-1dbqk3h-GridComponent-StyledGrid emotion-6"
            dir="ltr"
            role="list"
          >
            <li
              class="emotion-33 css-oarqw3-GridComponent-StyledFlexGrid emotion-6"
              data-e2e="onDemand"
              dir="ltr"
              role="listitem"
            >
              <div
                class="css-10pzo75-StartTimeWrapper emotion-20"
              >
                <div
                  class="css-14jp6ch-Wrapper emotion-19"
                >
                  <span
                    class="css-ltm9x5-StyledClock emotion-16"
                    dir="ltr"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6a3m3l-CoreIcon-ClockIcon emotion-15"
                      focusable="false"
                      height="13"
                      viewBox="0 0 13 13"
                      width="13"
                    >
                      <path
                        d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
                      />
                      <path
                        d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
                      />
                    </svg>
                  </span>
                  <span
                    aria-hidden="true"
                    class="css-1po43ul-StyledTimestamp emotion-18"
                    dir="ltr"
                  >
                    <time
                      class="css-1s2kt38-StyledTimestamp emotion-17"
                      datetime="2020-03-26"
                    >
                      05:30
                    </time>
                  </span>
                </div>
              </div>
              <div
                class="css-1p5015p-CardWrapper emotion-32"
              >
                <div
                  class="css-ed441g-TextWrapper emotion-26"
                >
                  <h3
                    class="css-i0f8i2-StyledH3 emotion-24"
                  >
                    <a
                      class="css-1vkbim8-Link-StyledLink emotion-23"
                      href="/afrique/bbc_afrique_radio/w172x371xccjp2q"
                    >
                      <span
                        role="text"
                      >
                        Actu Monde
                        <span
                          class="css-ow3j0s-VisuallyHiddenText emotion-21"
                        >
                          , 
                          05:30
                          , 
                        </span>
                        <span
                          class="css-1yguufh-TitleWrapper emotion-22"
                        >
                          26 mars 2020
                        </span>
                      </span>
                    </a>
                  </h3>
                  <p
                    class="css-1yo0f2n-SummaryWrapper emotion-25"
                  >
                    C'est la principale tranche dédiée à l'actualité internationale. De 5H 30 à 6H 30, des interviews d'analystes et des information
                  </p>
                </div>
                <div
                  class="css-179ih91-ButtonWrapper emotion-31"
                >
                  <span
                    class="css-1smn0bu-IconWrapper emotion-28"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-alzxo0-MediaIcon-AudioMediaIcon emotion-27"
                      focusable="false"
                      height="12px"
                      viewBox="0 0 13 12"
                      width="13px"
                    >
                      <path
                        d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                      />
                      <path
                        d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                      />
                    </svg>
                  </span>
                  <time
                    class="css-1qbecwp-DurationWrapper emotion-30"
                    datetime="PT6M"
                    dir="ltr"
                  >
                    <span
                      class="css-ow3j0s-VisuallyHiddenText emotion-21"
                    >
                       Durée 06,00 
                    </span>
                    <span
                      aria-hidden="true"
                    >
                      06:00
                    </span>
                  </time>
                </div>
              </div>
            </li>
            <li
              class="emotion-33 css-oarqw3-GridComponent-StyledFlexGrid emotion-6"
              data-e2e="onDemand"
              dir="ltr"
              role="listitem"
            >
              <div
                class="css-10pzo75-StartTimeWrapper emotion-20"
              >
                <div
                  class="css-14jp6ch-Wrapper emotion-19"
                >
                  <span
                    class="css-ltm9x5-StyledClock emotion-16"
                    dir="ltr"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6a3m3l-CoreIcon-ClockIcon emotion-15"
                      focusable="false"
                      height="13"
                      viewBox="0 0 13 13"
                      width="13"
                    >
                      <path
                        d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
                      />
                      <path
                        d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
                      />
                    </svg>
                  </span>
                  <span
                    aria-hidden="true"
                    class="css-1po43ul-StyledTimestamp emotion-18"
                    dir="ltr"
                  >
                    <time
                      class="css-1s2kt38-StyledTimestamp emotion-17"
                      datetime="2020-03-26"
                    >
                      05:16
                    </time>
                  </span>
                </div>
              </div>
              <div
                class="css-1p5015p-CardWrapper emotion-32"
              >
                <div
                  class="css-ed441g-TextWrapper emotion-26"
                >
                  <h3
                    class="css-i0f8i2-StyledH3 emotion-24"
                  >
                    <a
                      class="css-1vkbim8-Link-StyledLink emotion-23"
                      href="/afrique/bbc_afrique_radio/w172x6djbb3rg44"
                    >
                      <span
                        role="text"
                      >
                        Reportage
                        <span
                          class="css-ow3j0s-VisuallyHiddenText emotion-21"
                        >
                          , 
                          05:16
                          , 
                        </span>
                        <span
                          class="css-1yguufh-TitleWrapper emotion-22"
                        >
                          26 mars 2020
                        </span>
                      </span>
                    </a>
                  </h3>
                  <p
                    class="css-1yo0f2n-SummaryWrapper emotion-25"
                  >
                    Un sujet traité en profondeur et qui fait appel aux différents genres journalistiques.
                  </p>
                </div>
                <div
                  class="css-179ih91-ButtonWrapper emotion-31"
                >
                  <span
                    class="css-1smn0bu-IconWrapper emotion-28"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-alzxo0-MediaIcon-AudioMediaIcon emotion-27"
                      focusable="false"
                      height="12px"
                      viewBox="0 0 13 12"
                      width="13px"
                    >
                      <path
                        d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                      />
                      <path
                        d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                      />
                    </svg>
                  </span>
                  <time
                    class="css-1qbecwp-DurationWrapper emotion-30"
                    datetime="PT8M"
                    dir="ltr"
                  >
                    <span
                      class="css-ow3j0s-VisuallyHiddenText emotion-21"
                    >
                       Durée 08,00 
                    </span>
                    <span
                      aria-hidden="true"
                    >
                      08:00
                    </span>
                  </time>
                </div>
              </div>
            </li>
            <li
              class="emotion-33 css-oarqw3-GridComponent-StyledFlexGrid emotion-6"
              data-e2e="onDemand"
              dir="ltr"
              role="listitem"
            >
              <div
                class="css-10pzo75-StartTimeWrapper emotion-20"
              >
                <div
                  class="css-14jp6ch-Wrapper emotion-19"
                >
                  <span
                    class="css-ltm9x5-StyledClock emotion-16"
                    dir="ltr"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6a3m3l-CoreIcon-ClockIcon emotion-15"
                      focusable="false"
                      height="13"
                      viewBox="0 0 13 13"
                      width="13"
                    >
                      <path
                        d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
                      />
                      <path
                        d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
                      />
                    </svg>
                  </span>
                  <span
                    aria-hidden="true"
                    class="css-1po43ul-StyledTimestamp emotion-18"
                    dir="ltr"
                  >
                    <time
                      class="css-1s2kt38-StyledTimestamp emotion-17"
                      datetime="2020-03-26"
                    >
                      05:15
                    </time>
                  </span>
                </div>
              </div>
              <div
                class="css-1p5015p-CardWrapper emotion-32"
              >
                <div
                  class="css-ed441g-TextWrapper emotion-26"
                >
                  <h3
                    class="css-i0f8i2-StyledH3 emotion-24"
                  >
                    <a
                      class="css-1vkbim8-Link-StyledLink emotion-23"
                      href="/afrique/bbc_afrique_radio/w172x5n20y5f68g"
                    >
                      <span
                        role="text"
                      >
                        Bulletin D'informations
                        <span
                          class="css-ow3j0s-VisuallyHiddenText emotion-21"
                        >
                          , 
                          05:15
                          , 
                        </span>
                        <span
                          class="css-1yguufh-TitleWrapper emotion-22"
                        >
                          26 mars 2020
                        </span>
                      </span>
                    </a>
                  </h3>
                  <p
                    class="css-1yo0f2n-SummaryWrapper emotion-25"
                  >
                    Le tour du monde de l'actualité en 2 minutes 
                  </p>
                </div>
                <div
                  class="css-179ih91-ButtonWrapper emotion-31"
                >
                  <span
                    class="css-1smn0bu-IconWrapper emotion-28"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-alzxo0-MediaIcon-AudioMediaIcon emotion-27"
                      focusable="false"
                      height="12px"
                      viewBox="0 0 13 12"
                      width="13px"
                    >
                      <path
                        d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                      />
                      <path
                        d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                      />
                    </svg>
                  </span>
                  <time
                    class="css-1qbecwp-DurationWrapper emotion-30"
                    datetime="PT1M"
                    dir="ltr"
                  >
                    <span
                      class="css-ow3j0s-VisuallyHiddenText emotion-21"
                    >
                       Durée 01,00 
                    </span>
                    <span
                      aria-hidden="true"
                    >
                      01:00
                    </span>
                  </time>
                </div>
              </div>
            </li>
            <li
              class="emotion-33 css-oarqw3-GridComponent-StyledFlexGrid emotion-6"
              data-e2e="next"
              dir="ltr"
              role="listitem"
            >
              <div
                class="css-10pzo75-StartTimeWrapper emotion-20"
              >
                <div
                  class="css-14jp6ch-Wrapper emotion-19"
                >
                  <span
                    class="css-ltm9x5-StyledClock emotion-16"
                    dir="ltr"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-6a3m3l-CoreIcon-ClockIcon emotion-15"
                      focusable="false"
                      height="13"
                      viewBox="0 0 13 13"
                      width="13"
                    >
                      <path
                        d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
                      />
                      <path
                        d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
                      />
                    </svg>
                  </span>
                  <span
                    aria-hidden="true"
                    class="css-1po43ul-StyledTimestamp emotion-18"
                    dir="ltr"
                  >
                    <time
                      class="css-1s2kt38-StyledTimestamp emotion-17"
                      datetime="2030-01-01"
                    >
                      09:00
                    </time>
                  </span>
                </div>
              </div>
              <div
                class="css-1p5015p-CardWrapper emotion-32"
              >
                <div
                  class="css-ed441g-TextWrapper emotion-26"
                >
                  <h3
                    class="css-1hrv2u6-StyledH3 emotion-24"
                  >
                    <span
                      role="text"
                    >
                      <span
                        class="css-194b0aj-NextLabel emotion-81"
                        dir="ltr"
                      >
                        SUIVANT 
                      </span>
                      A Vous L'antenne
                      <span
                        class="css-ow3j0s-VisuallyHiddenText emotion-21"
                      >
                        , 
                        09:00
                        , 
                      </span>
                      <span
                        class="css-1vcreeq-TitleWrapper emotion-22"
                      >
                        1 janvier 2030
                      </span>
                    </span>
                  </h3>
                  <p
                    class="css-1yo0f2n-SummaryWrapper emotion-25"
                  >
                    Du lundi au vendredi les auditeurs réagissent à chaud sur les sujets qui rythment l'actualité 
                  </p>
                </div>
                <div
                  class="css-136xa31-ButtonWrapper emotion-31"
                >
                  <span
                    class="css-1soil44-IconWrapper emotion-28"
                  >
                    <svg
                      aria-hidden="true"
                      class="css-alzxo0-MediaIcon-AudioMediaIcon emotion-27"
                      focusable="false"
                      height="12px"
                      viewBox="0 0 13 12"
                      width="13px"
                    >
                      <path
                        d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
                      />
                      <path
                        d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
                      />
                    </svg>
                  </span>
                  <time
                    class="css-1qbecwp-DurationWrapper emotion-30"
                    datetime="PT15M"
                    dir="ltr"
                  >
                    <span
                      class="css-ow3j0s-VisuallyHiddenText emotion-21"
                    >
                       Durée 15,00 
                    </span>
                    <span
                      aria-hidden="true"
                    >
                      15:00
                    </span>
                  </time>
                </div>
              </div>
            </li>
          </div>
          <a
            class="css-1ld2mqw-RadioFrequencyLink emotion-97"
            href="/afrique/institutionelles/2010/12/000000_schedules_frequencies_afrique"
          >
            Nos fréquences
          </a>
        </div>
      </section>
    </div>
  </body>
</html>
`;
